CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(h2_example)

SET(CMAKE_CXX_STANDARD 11)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

MESSAGE("Build Type is " ${CMAKE_BUILD_TYPE})

IF(CMAKE_BUILD_TYPE MATCHES "Release") 
    IF(CMAKE_CXX_COMPILER_ID MATCHES "MSVC") # Disable Optimization
        ADD_COMPILE_OPTIONS(/Od)
    ELSE()
        ADD_COMPILE_OPTIONS(-g -O0)
    ENDIF()
ENDIF()

AUX_SOURCE_DIRECTORY(. SRC_TEST)

ADD_EXECUTABLE(a.out ${SRC_TEST})

IF(CYGWIN OR MINGW)
    TARGET_LINK_LIBRARIES(a.out Ws2_32 Shlwapi Dbghelp)
ENDIF()
