CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(h2_example)

SET(CMAKE_CXX_STANDARD 14)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

MESSAGE("Build Type is " ${CMAKE_BUILD_TYPE})

IF(CMAKE_BUILD_TYPE MATCHES "Release") 
    IF(MSVC)
        ADD_COMPILE_OPTIONS(/Od) # Disable Optimization
    ELSE()
        ADD_COMPILE_OPTIONS(-g -O0)
    ENDIF()
ENDIF()

AUX_SOURCE_DIRECTORY(. SRC_TEST)
ADD_EXECUTABLE(a.out ${SRC_TEST} ../build/h2unit.cpp)
TARGET_COMPILE_DEFINITIONS(a.out PUBLIC H2UNIT=2)

IF(CYGWIN OR MINGW)
    TARGET_LINK_LIBRARIES(a.out Ws2_32 Shlwapi Dbghelp)
ENDIF()

IF(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    ADD_CUSTOM_TARGET(fixup ALL
        COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../h2fix.sh a.out
        DEPENDS a.out
    )
ENDIF()
