CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(h2_print)

SET(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -std=c++11 -g")

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    SET(CMAKE_EXE_LINKER_FLAGS " ${CMAKE_EXE_LINKER_FLAGS} -Wl,-segprot,__TEXT,rwx,rwx")
ENDIF()

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
ENDIF()

AUX_SOURCE_DIRECTORY(. SRC_TEST)

ADD_EXECUTABLE(a.out ../build/h2unit.cpp ${SRC_TEST})
