CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(h2_print)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_STANDARD 11)

IF(NOT CMAKE_SYSTEM_NAME MATCHES "Windows")
    ADD_CUSTOM_TARGET(concat ALL
        COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/../build/concat.py
    )
ENDIF()

AUX_SOURCE_DIRECTORY(. SRC_TEST)

ADD_EXECUTABLE(a.out ../build/h2unit.cpp ${SRC_TEST})

IF(NOT CMAKE_SYSTEM_NAME MATCHES "Windows")
    ADD_DEPENDENCIES(a.out concat)
ENDIF()

IF(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    ADD_CUSTOM_TARGET(fixup ALL
        COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../h2fix.sh a.out
        DEPENDS a.out
    )
ENDIF()
