CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(h2_test)

ADD_SUBDIRECTORY(libs)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_STANDARD 11)

IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
    ADD_COMPILE_OPTIONS(-bigobj)
    ADD_COMPILE_OPTIONS(/wd4018)
    ADD_COMPILE_OPTIONS(/wd4100)
    ADD_COMPILE_OPTIONS(/wd4101) #unreferenced local variable
    ADD_COMPILE_OPTIONS(/wd4127)
    ADD_COMPILE_OPTIONS(/wd4189)
    ADD_COMPILE_OPTIONS(/wd4267)
    ADD_COMPILE_OPTIONS(/wd4244)
    ADD_COMPILE_OPTIONS(/wd4324)
    ADD_COMPILE_OPTIONS(/wd4505)
    ADD_COMPILE_OPTIONS(/wd4700)
    ADD_COMPILE_OPTIONS(/wd4706)
    ADD_COMPILE_OPTIONS(/wd4819)
    ADD_COMPILE_OPTIONS(/wd4996) #function or variable may be unsafe
    ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS")
    ADD_DEFINITIONS("-D_WINSOCK_DEPRECATED_NO_WARNINGS")
ELSE()
    ADD_COMPILE_OPTIONS(-Wno-write-strings)
    ADD_COMPILE_OPTIONS(-Wno-writable-strings)
ENDIF()

FILE(GLOB SRC_TEST "test_types.cpp" "test_*.cpp")

LINK_DIRECTORIES(libs)
LINK_LIBRARIES(a_dynamic_library)
ADD_EXECUTABLE(a.out ${SRC_TEST})

IF(NOT CMAKE_SYSTEM_NAME MATCHES "Windows")
    ADD_COMPILE_OPTIONS(-pthread)
    TARGET_LINK_LIBRARIES(a.out pthread)
ENDIF()

IF(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    ADD_CUSTOM_TARGET(fixup ALL
        COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../h2fix.sh a.out
        DEPENDS a.out
    )
ENDIF()
